modules/gdscript/tests/scripts/analyzer/errors/use_value_of_void_function_gd_utility.gd
func test():
	print(print_debug()) # GDScript utility function.
